@@ -39,6 +39,7 @@ Patches
  - Aubrey Holland
  - Konstantin Käfer
  - Mak Kolybabi
+ - Peter Körner
  - Stella Laurenzo
  - Dennis Luxen
  - Tom MacWright
