@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Add AlsoFilter functionality - http://trac.mapnik.org/wiki/AlsoFilter
+
 - SQLite Plugin: optimize io using shared cache and no mutexes (#797)
 
 - Directly link input plugins to libmapnik to avoid having to set dlopen flags from binding languages (#790)
